feat(quality): configure code quality tools and checks
- Add Ruff for linting and formatting with strict rules
  - Configure import sorting
  - Enable modern Python checks
  - Set line length and style preferences
  - Add specific rules for tests

- Set up pytest with comprehensive configuration
  - Add coverage reporting
  - Configure async test support
  - Enable parallel test execution
  - Add test pattern matching

- Configure mypy with strict type checking
  - Enable all strict type checks
  - Set Python 3.9 as target
  - Configure test-specific overrides
  - Add type checking for dependencies

- Add pre-commit hooks for automated checks
  - Basic file checks (trailing whitespace, EOF)
  - YAML/TOML validation
  - Security checks with bandit
  - Code formatting with Ruff
  - Type checking with mypy

- Update development dependencies
  - Add test runners and plugins
  - Include type checking tools
  - Add code quality dependencies

This commit completes the quality tools setup phase of the project,
ensuring consistent code style and type safety across the codebase.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,9 +44,9 @@ markdown_extensions:
       alternate_style: true
   - tables
   - footnotes
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji
 
 plugins:
   - search
@@ -90,4 +90,4 @@ nav:
     - Utilities: api/utilities.md
     - Pydantic: api/pydantic.md
   - Contributing: contributing.md
-  - Changelog: changelog.md 
+  - Changelog: changelog.md
