--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,12 +34,19 @@ jobs:
         curl -LsSf https://astral.sh/uv/install.sh | sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
+    - name: Create virtual environment
+      run: |
+        uv venv
+        source .venv/bin/activate
+
     - name: Install build dependencies
       run: |
+        source .venv/bin/activate
         uv pip install build twine
 
     - name: Build package
       run: |
+        source .venv/bin/activate
         python -m build
 
     - name: Publish to PyPI
