--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,14 @@ jobs:
         curl -LsSf https://astral.sh/uv/install.sh | sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
+    - name: Create virtual environment
+      run: |
+        uv venv
+        source .venv/bin/activate
+
     - name: Install dependencies
       run: |
+        source .venv/bin/activate
         uv pip install -e ".[dev]"
 
     - name: Run pre-commit
@@ -38,12 +44,15 @@ jobs:
 
     - name: Run tests
       run: |
+        source .venv/bin/activate
         pytest --cov=metropy --cov-report=xml
 
     - name: Type check with mypy
       run: |
+        source .venv/bin/activate
         mypy src
 
     - name: Lint with ruff
       run: |
+        source .venv/bin/activate
         ruff check src tests
